force-app/main/default/objects/Lease_Negotiation__c/Lease_Negotiation__c.object-meta.xml
<CustomObject>
    <description>Use to track the negotiation process for ending site lieases</description>
    <label>Lease Negotiation</label>
    <nameField>
        <label>Lease Negotiation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lease Negotiation</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>