force-app/main/default/objects/Lease_Negotiation__c/fields/Actions_Required__c.field-meta.xml
<CustomField>
    <fullName>Actions_Required__c</fullName>
    <label>Actions Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>