force-app/main/default/objects/Lease_Negotiation__c/fields/Agree_Neg_days_elapsed_Finalize_agreemen__c.field-meta.xml
<CustomField>
    <fullName>Agree_Neg_days_elapsed_Finalize_agreemen__c</fullName>
    <formula>Agreement_neg_with_landlord_End_Date__c -  Finalize_Agreement_Start_Date__c</formula>
    <label>Agree Neg days elapsed Finalize agreemen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>