force-app/main/default/objects/Lease_Negotiation__c/fields/Agreement_neg_with_landlord_start_date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_neg_with_landlord_start_date__c</fullName>
    <inlineHelpText>Indicates when negotiation started in this status.</inlineHelpText>
    <label>Agreement neg with landlord start date</label>
    <type>Date</type>
</CustomField>