force-app/main/default/objects/Lease_Negotiation__c/fields/Agreement_on_Terms_with_LL__c.field-meta.xml
<CustomField>
    <fullName>Agreement_on_Terms_with_LL__c</fullName>
    <label>Agreement on Terms with LL?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>