force-app/main/default/objects/Lease_Negotiation__c/fields/Agreement_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Outcome__c</fullName>
    <label>Agreement Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreement Executed</fullName>
            </value>
            <value>
                <fullName>No Agreement Reached - prepare for Physical Deconstruction.</fullName>
            </value>
            <value>
                <fullName>T-Mobile Ended Early - No Agreement Reached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>