force-app/main/default/objects/Lease_Negotiation__c/fields/Agreement_review_days_elapsed_prep_decom__c.field-meta.xml
<CustomField>
    <fullName>Agreement_review_days_elapsed_prep_decom__c</fullName>
    <formula>Agreement_Review_End_Date__c - Prepare_for_Physical_Decom_Start_Date__c</formula>
    <label>Agreement review days elapsed prep decom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>