force-app/main/default/objects/Lease_Negotiation__c/fields/Agreement_Review_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Review_End_Date__c</fullName>
    <inlineHelpText>Indicates when negotiation started in this status.</inlineHelpText>
    <label>Agreement Review End Date</label>
    <type>Date</type>
</CustomField>