force-app/main/default/objects/Lease_Negotiation__c/fields/Agreement_Submitted_to_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Submitted_to_DocuSign__c</fullName>
    <label>Agreement Submitted to DocuSign</label>
    <type>Date</type>
</CustomField>