force-app/main/default/objects/Lease_Negotiation__c/fields/Automation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Automation_Date_Time__c</fullName>
    <label>Automation Date/Time</label>
    <type>DateTime</type>
</CustomField>