force-app/main/default/objects/Lease_Negotiation__c/fields/Cleared_for_Vendor_Billing__c.field-meta.xml
<CustomField>
    <fullName>Cleared_for_Vendor_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checkbox used by Vendors to authorize billing for specific lease negotiations. Use PO Line 2 field for specific date, or field history for when this date is populated.</inlineHelpText>
    <label>Cleared for Vendor Billing</label>
    <type>Checkbox</type>
</CustomField>