force-app/main/default/objects/Lease_Negotiation__c/fields/Confirmed_Termination_Sent_to_Prop_Mgmt__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Termination_Sent_to_Prop_Mgmt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>LN Manager to review Cell Site Tracker to ensure NOT/NNR/TOO/LTA loaded to Property Management system of record.</inlineHelpText>
    <label>Confirmed Termination Sent to Prop Mgmt</label>
    <type>Checkbox</type>
</CustomField>