force-app/main/default/objects/Lease_Negotiation__c/fields/Cost_Savings_Tracker_Updated__c.field-meta.xml
<CustomField>
    <fullName>Cost_Savings_Tracker_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cost Savings Tracker Updated</label>
    <type>Checkbox</type>
</CustomField>