force-app/main/default/objects/Lease_Negotiation__c/fields/Create_NTP_Record__c.field-meta.xml
<CustomField>
    <fullName>Create_NTP_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create NTP Record</label>
    <type>Checkbox</type>
</CustomField>