force-app/main/default/objects/Lease_Negotiation__c/fields/Current_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Term_End_Date__c</fullName>
    <formula>Lease_Abstract__r.Lease_Term_End_Date__c</formula>
    <inlineHelpText>Notice date from related Lease Termination with NNR or NOT called out</inlineHelpText>
    <label>Current Term End Date</label>
    <type>Date</type>
</CustomField>