force-app/main/default/objects/Lease_Negotiation__c/fields/Decon_Type_Incentive_Payment_2_new__c.field-meta.xml
<CustomField>
    <fullName>Decon_Type_Incentive_Payment_2_new__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Scope of Work Designation (from NTP) If &quot;Cabinets Only&quot;, then flag this PO to be issued</inlineHelpText>
    <label>Decon Type Incentive Payment #2</label>
    <type>Checkbox</type>
</CustomField>