force-app/main/default/objects/Lease_Negotiation__c/fields/Deconstruction_PM__c.field-meta.xml
<CustomField>
    <fullName>Deconstruction_PM__c</fullName>
    <formula>Site_Deconstruction__r.Project_Manager__r.FirstName &amp; &quot; &quot;&amp; Site_Deconstruction__r.Project_Manager__r.LastName</formula>
    <inlineHelpText>Populated from the related deconstruction record</inlineHelpText>
    <label>Deconstruction PM</label>
    <type>Text</type>
</CustomField>