force-app/main/default/objects/Lease_Negotiation__c/fields/Deconstruction_PM_Email__c.field-meta.xml
<CustomField>
    <fullName>Deconstruction_PM_Email__c</fullName>
    <formula>Site_Deconstruction__r.PM_Email__c</formula>
    <inlineHelpText>Populated from the related Deconstruction record</inlineHelpText>
    <label>Deconstruction PM Email</label>
    <type>Text</type>
</CustomField>