force-app/main/default/objects/Lease_Negotiation__c/fields/Dish_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Dish_Acceptance__c</fullName>
    <formula>Dish_Option__r.Dish_Acceptance_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dish Acceptance Date</label>
    <type>Date</type>
</CustomField>