force-app/main/default/objects/Lease_Negotiation__c/fields/Dish_Option_Status_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Dish_Option_Status_Change_Date__c</fullName>
    <description>Hidden Field used to track date the Dish Option Status last changed.  To support reporting.  Updated from a process builder on the Dish Option Object.</description>
    <label>Dish Option Status Change Date</label>
    <type>Date</type>
</CustomField>