force-app/main/default/objects/Lease_Negotiation__c/fields/Divestiture_Site__c.field-meta.xml
<CustomField>
    <fullName>Divestiture_Site__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Divestiture Site</label>
    <referenceTo>Divestiture_Site__c</referenceTo>
    <relationshipLabel>Lease Negotiation</relationshipLabel>
    <relationshipName>Lease_Negotiation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>