force-app/main/default/objects/Lease_Negotiation__c/fields/Does_the_Lease_need_to_be_Terminated__c.field-meta.xml
<CustomField>
    <fullName>Does_the_Lease_need_to_be_Terminated__c</fullName>
    <label>Does the Lease need to be Terminated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>