force-app/main/default/objects/Lease_Negotiation__c/fields/Draft_Agreement_Approved__c.field-meta.xml
<CustomField>
    <fullName>Draft_Agreement_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the draft agreement is approved.</inlineHelpText>
    <label>Draft Agreement Approved</label>
    <type>Checkbox</type>
</CustomField>