force-app/main/default/objects/Lease_Negotiation__c/fields/Draft_Agreement_Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Draft_Agreement_Approved_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Draft Agreement Approved by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lease_Negotiation3</relationshipName>
    <type>Lookup</type>
</CustomField>