force-app/main/default/objects/Lease_Negotiation__c/fields/DX_Complete_Actual__c.field-meta.xml
<CustomField>
    <fullName>DX_Complete_Actual__c</fullName>
    <formula>Site_Deconstruction__r.DX_Complete_Actual__c</formula>
    <label>DX Complete Actual</label>
    <type>Date</type>
</CustomField>