force-app/main/default/objects/Lease_Negotiation__c/fields/DX_Start_Forecast__c.field-meta.xml
<CustomField>
    <fullName>DX_Start_Forecast__c</fullName>
    <formula>Site_Deconstruction__r.DX_Start_Forecast__c</formula>
    <inlineHelpText>Populated from the related deconstruction record</inlineHelpText>
    <label>DX Start Forecast</label>
    <type>Date</type>
</CustomField>