force-app/main/default/objects/Lease_Negotiation__c/fields/Early_termination_of_the_Lease_Needed__c.field-meta.xml
<CustomField>
    <fullName>Early_termination_of_the_Lease_Needed__c</fullName>
    <inlineHelpText>Determines if a Lease Termination Agreement is needed or Pay &amp; Walk terms need to be negotiated.</inlineHelpText>
    <label>Early termination of the Lease Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>