force-app/main/default/objects/Lease_Negotiation__c/fields/Final_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Final_Agreement_Type__c</fullName>
    <inlineHelpText>Select the final outcome of the lease negotiations for this record.</inlineHelpText>
    <label>Final Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lease Termination Agreement (P&amp;W and/or Early Termination)</fullName>
            </value>
            <value>
                <fullName>Notice of Termination (NOT) Only</fullName>
            </value>
            <value>
                <fullName>Notice of Non-Renewal (NNR) Only</fullName>
            </value>
            <value>
                <fullName>None (site in holdover or lease expired/terminated)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>