force-app/main/default/objects/Lease_Negotiation__c/fields/Finalize_Agreement_days_elapsed_Agree_Re__c.field-meta.xml
<CustomField>
    <fullName>Finalize_Agreement_days_elapsed_Agree_Re__c</fullName>
    <formula>Finalize_Agreement_End_Date__c -  Agreement_Review_Start_Date__c</formula>
    <label>Finalize Agreement days elapsed Agree Re</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>