force-app/main/default/objects/Lease_Negotiation__c/fields/Finalize_Agreement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Finalize_Agreement_End_Date__c</fullName>
    <inlineHelpText>Indicates when negotiation started in this status.</inlineHelpText>
    <label>Finalize Agreement End Date</label>
    <type>Date</type>
</CustomField>