force-app/main/default/objects/Lease_Negotiation__c/fields/Forced_Removal__c.field-meta.xml
<CustomField>
    <fullName>Forced_Removal__c</fullName>
    <formula>Divestiture_Site__r.Forced_Relocation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forced Removal</label>
    <type>Checkbox</type>
</CustomField>