force-app/main/default/objects/Lease_Negotiation__c/fields/Forecasted_NTP_Date__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_NTP_Date__c</fullName>
    <inlineHelpText>Required Field</inlineHelpText>
    <label>Forecasted NTP Date</label>
    <type>Date</type>
</CustomField>