force-app/main/default/objects/Lease_Negotiation__c/fields/Has_an_NNR_already_been_sent__c.field-meta.xml
<CustomField>
    <fullName>Has_an_NNR_already_been_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Was the NNR/NOT sent prior to Divest/Decom? For example, by property management.</inlineHelpText>
    <label>NNR/Not already been sent</label>
    <type>Checkbox</type>
</CustomField>