force-app/main/default/objects/Lease_Negotiation__c/fields/If_LTA_Actual_Costs_Paid_to_LL_for_P_W__c.field-meta.xml
<CustomField>
    <fullName>If_LTA_Actual_Costs_Paid_to_LL_for_P_W__c</fullName>
    <inlineHelpText>Amount to be paid to LL in exchange for P&amp;W, as agreed upon in LTA.</inlineHelpText>
    <label>If LTA, Actual Costs Paid to LL for P&amp;W</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>