force-app/main/default/objects/Lease_Negotiation__c/fields/If_LTA_Cost_Avoidance_for_P_W__c.field-meta.xml
<CustomField>
    <fullName>If_LTA_Cost_Avoidance_for_P_W__c</fullName>
    <inlineHelpText>At time of negotiation, enter estimated cost avoidance using DX cost estimates. After DX is complete, this number will be updated to show actual total avoidance.</inlineHelpText>
    <label>If LTA, Cost Avoidance for P&amp;W</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>