force-app/main/default/objects/Lease_Negotiation__c/fields/Internal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Internal_Owner__c</fullName>
    <formula>Owner:User.FirstName &amp; &apos; &apos; &amp;  Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Owner</label>
    <type>Text</type>
</CustomField>