force-app/main/default/objects/Lease_Negotiation__c/fields/Is_Automation_Bypassed__c.field-meta.xml
<CustomField>
    <fullName>Is_Automation_Bypassed__c</fullName>
    <formula>Automation_Date_Time__c &gt; NOW() - 0.000057</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Automation_Bypassed</label>
    <type>Checkbox</type>
</CustomField>