force-app/main/default/objects/Lease_Negotiation__c/fields/Is_lease_in_holdover_term_exp_status__c.field-meta.xml
<CustomField>
    <fullName>Is_lease_in_holdover_term_exp_status__c</fullName>
    <inlineHelpText>Is the lease in holdover, terminated or expired status?</inlineHelpText>
    <label>Is lease in holdover,term/exp status?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>