force-app/main/default/objects/Lease_Negotiation__c/fields/Is_the_landlord_an_MLA__c.field-meta.xml
<CustomField>
    <fullName>Is_the_landlord_an_MLA__c</fullName>
    <label>Is the landlord an MLA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>