force-app/main/default/objects/Lease_Negotiation__c/fields/Landlord_Entity__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landlord Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Cell_Site_Landlord__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lease Negotiation (Landlord Entity)</relationshipLabel>
    <relationshipName>Lease_Negotiation1</relationshipName>
    <type>Lookup</type>
</CustomField>