force-app/main/default/objects/Lease_Negotiation__c/fields/Landlord_Normalized__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Normalized__c</fullName>
    <formula>Divestiture_Site__r.Landlord_Normalized__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>From the Divestiture Site Record.</inlineHelpText>
    <label>Landlord Normalized</label>
    <type>Text</type>
</CustomField>