force-app/main/default/objects/Lease_Negotiation__c/fields/Landlord_Signed_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Signed_Agreement__c</fullName>
    <label>Landlord Signed Agreement</label>
    <type>Date</type>
</CustomField>