force-app/main/default/objects/Lease_Negotiation__c/fields/Lease_Abstract__c.field-meta.xml
<CustomField>
    <fullName>Lease_Abstract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Lease Abstract</label>
    <referenceTo>Lease_Abstract__c</referenceTo>
    <relationshipLabel>Lease Negotiation</relationshipLabel>
    <relationshipName>Lease_Negotiation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>