force-app/main/default/objects/Lease_Negotiation__c/fields/Lease_ID__c.field-meta.xml
<CustomField>
    <fullName>Lease_ID__c</fullName>
    <label>Lease ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>