force-app/main/default/objects/Lease_Negotiation__c/fields/Lease_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Lease_Landlord__c</fullName>
    <label>Lease Landlord</label>
    <length>255</length>
    <type>Text</type>
</CustomField>