force-app/main/default/objects/Lease_Negotiation__c/fields/Lease_Neg_Settlement_Vendor_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Neg_Settlement_Vendor_PO_Date__c</fullName>
    <label>Lease Neg Settlement Vendor PO Date</label>
    <type>Date</type>
</CustomField>