force-app/main/default/objects/Lease_Negotiation__c/fields/Lease_Negotiation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Lease_Negotiation_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease Negotiation Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lease_Negotiation4</relationshipName>
    <type>Lookup</type>
</CustomField>