force-app/main/default/objects/Lease_Negotiation__c/fields/Lease_Negotiation_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Lease_Negotiation_Manager_Email__c</fullName>
    <formula>Lease_Negotiation_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Negotiation Manager Email</label>
    <type>Text</type>
</CustomField>