force-app/main/default/objects/Lease_Negotiation__c/fields/Lease_Negotiation_Settlement_Vendor_PO__c.field-meta.xml
<CustomField>
    <fullName>Lease_Negotiation_Settlement_Vendor_PO__c</fullName>
    <label>Lease Negotiation Settlement Vendor PO</label>
    <length>18</length>
    <type>Text</type>
</CustomField>