force-app/main/default/objects/Lease_Negotiation__c/fields/Lease_Negotiation_Vendor_PO__c.field-meta.xml
<CustomField>
    <fullName>Lease_Negotiation_Vendor_PO__c</fullName>
    <label>Lease Negotiation Vendor PO</label>
    <length>12</length>
    <type>Text</type>
</CustomField>