force-app/main/default/objects/Lease_Negotiation__c/fields/Lease_Negotiation_Vendor_PO_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Negotiation_Vendor_PO_Date__c</fullName>
    <label>Lease Negotiation Vendor PO Date</label>
    <type>Date</type>
</CustomField>