force-app/main/default/objects/Lease_Negotiation__c/fields/Lease_Notes_and_Recommended_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Lease_Notes_and_Recommended_Next_Steps__c</fullName>
    <label>Lease Notes and Recommended Next Steps</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>