force-app/main/default/objects/Lease_Negotiation__c/fields/Lease_Status__c.field-meta.xml
<CustomField>
    <fullName>Lease_Status__c</fullName>
    <formula>Lease_Abstract__r.Lease_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Status</label>
    <type>Text</type>
</CustomField>