force-app/main/default/objects/Lease_Negotiation__c/fields/Lease_Termination_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Termination_Effective_Date__c</fullName>
    <inlineHelpText>Populate this date here or in the lease termination record. It will populate in either.</inlineHelpText>
    <label>Lease Termination Effective Date</label>
    <type>Date</type>
</CustomField>