force-app/main/default/objects/Lease_Negotiation__c/fields/Lease_Termination_NNR_NOT_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Lease_Termination_NNR_NOT_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lease Termination (NNR/NOT) Lookup</label>
    <referenceTo>Lease_Termination__c</referenceTo>
    <relationshipLabel>Lease Negotiation</relationshipLabel>
    <relationshipName>Lease_Negotiation</relationshipName>
    <type>Lookup</type>
</CustomField>