force-app/main/default/objects/Lease_Negotiation__c/fields/Lease_Use__c.field-meta.xml
<CustomField>
    <fullName>Lease_Use__c</fullName>
    <formula>Lease_Abstract__r.Lease_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Use</label>
    <type>Text</type>
</CustomField>