force-app/main/default/objects/Lease_Negotiation__c/fields/Length_of_LL_Negotiations__c.field-meta.xml
<CustomField>
    <fullName>Length_of_LL_Negotiations__c</fullName>
    <formula>TODAY()-  LL_Negotiations_Initiated_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the length of time since the record entered the Agreement Negotiation stage/</inlineHelpText>
    <label>Length of LL Negotiations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>