force-app/main/default/objects/Lease_Negotiation__c/fields/LL_Negotiations_Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>LL_Negotiations_Initiated_Date__c</fullName>
    <label>LL Negotiations Initiated (Date)</label>
    <type>Date</type>
</CustomField>