force-app/main/default/objects/Lease_Negotiation__c/fields/MLA_Term_T_Mob_review_Days_elapsed__c.field-meta.xml
<CustomField>
    <fullName>MLA_Term_T_Mob_review_Days_elapsed__c</fullName>
    <formula>MLA_Termination_Process_End_Date__c -  T_Mobile_Review_NNr_Not_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MLA Term -T-Mob review Days elapsed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>