force-app/main/default/objects/Lease_Negotiation__c/fields/MLA_Termination_Process_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MLA_Termination_Process_Start_Date__c</fullName>
    <description>Used primarily for reporting- auto-populates with status change</description>
    <inlineHelpText>Used primarily for reporting- auto-populates with status change</inlineHelpText>
    <label>MLA Termination Process Start Date</label>
    <type>Date</type>
</CustomField>