force-app/main/default/objects/Lease_Negotiation__c/fields/Month_DD_Package_Offered_to_Dish__c.field-meta.xml
<CustomField>
    <fullName>Month_DD_Package_Offered_to_Dish__c</fullName>
    <formula>CASE(MONTH(Divestiture_Site__r.Date_Loaded_to_Intralinks_Original__c),
1, &quot;January&quot;,
2, &quot;Febuary&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
    <label>Month DD Package Offered to Dish</label>
    <type>Text</type>
</CustomField>