force-app/main/default/objects/Lease_Negotiation__c/fields/Negotiating_for_select_one__c.field-meta.xml
<CustomField>
    <fullName>Negotiating_for_select_one__c</fullName>
    <label>Negotiating for (select one):</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minimal Deconstruction</fullName>
            </value>
            <value>
                <fullName>Early Termination</fullName>
            </value>
            <value>
                <fullName>Early Termination, plus Minimal Deconstruction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>