force-app/main/default/objects/Lease_Negotiation__c/fields/Negotiation_Steps__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_Steps__c</fullName>
    <label>Negotiation Steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Vendor Assignment</fullName>
                <default>true</default>
                <label>Awaiting Vendor Assignment</label>
            </value>
            <value>
                <fullName>Start Lease Negotiation Process</fullName>
            </value>
            <value>
                <fullName>MLA Termination Process</fullName>
            </value>
            <value>
                <fullName>T-Mobile Review NNR/NOT</fullName>
                <label>T-Mobile Review NNR/NOT or TAW</label>
            </value>
            <value>
                <fullName>Non-MLA Termination Process</fullName>
            </value>
            <value>
                <fullName>Agreement Negotiation with the Landlord</fullName>
            </value>
            <value>
                <fullName>Finalize Agreement</fullName>
            </value>
            <value>
                <fullName>Agreement Review</fullName>
            </value>
            <value>
                <fullName>Prepare for Physical Decom</fullName>
            </value>
            <value>
                <fullName>Physical Decon Process</fullName>
            </value>
            <value>
                <fullName>Exhibit A Executed</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Agreement on Terms</fullName>
                <isActive>false</isActive>
                <label>Agreement on Terms</label>
            </value>
            <value>
                <fullName>Complete TAW</fullName>
                <isActive>false</isActive>
                <label>Complete TAW</label>
            </value>
            <value>
                <fullName>NNR or NOT</fullName>
                <isActive>false</isActive>
                <label>NNR or NOT</label>
            </value>
            <value>
                <fullName>Negotiate LTA</fullName>
                <isActive>false</isActive>
                <label>Negotiate LTA</label>
            </value>
            <value>
                <fullName>Negotiate P&amp;W Agreeent</fullName>
                <isActive>false</isActive>
                <label>Negotiate P&amp;W Agreeent</label>
            </value>
            <value>
                <fullName>No Agreement on Terms</fullName>
                <isActive>false</isActive>
                <label>No Agreement on Terms</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>