force-app/main/default/objects/Lease_Negotiation__c/fields/NNR_or_NOT__c.field-meta.xml
<CustomField>
    <fullName>NNR_or_NOT__c</fullName>
    <inlineHelpText>Based on the Lease terms select the type of notice to be sent to the LL.</inlineHelpText>
    <label>NNR/NOT/TOO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Notice of Non Renewal</fullName>
            </value>
            <value>
                <fullName>Notice of Termination</fullName>
            </value>
            <value>
                <fullName>Temination of Occupancy</fullName>
            </value>
            <value>
                <fullName>Notice of Non Renewal  and Pay &amp; Walk</fullName>
            </value>
            <value>
                <fullName>Notice of Termination and Pay &amp; Walk</fullName>
            </value>
            <value>
                <fullName>Lease In Final Term</fullName>
            </value>
            <value>
                <fullName>Pay &amp; Walk</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>