force-app/main/default/objects/Lease_Negotiation__c/fields/NOD_Issue_Date_Plus_120__c.field-meta.xml
<CustomField>
    <fullName>NOD_Issue_Date_Plus_120__c</fullName>
    <formula>Divestiture_Site__r.NOD_Plus_120__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NOD Issue Date Plus 120</label>
    <type>Date</type>
</CustomField>